--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <title>WebStudio</title>
   </head>
   <body>
-   <!-- header -->
+    <!-- header -->
     <header class="page-header">
       <div class="container page-header-container">
         <nav class="header-nav">
@@ -130,7 +130,7 @@
           </ul>
         </div>
       </section>
-<!-- 
+      <!-- 
       team -->
       <section class="page-team section">
         <div class="container team-container">
@@ -359,7 +359,7 @@
         </div>
       </section>
 
-    <!-- portfolio -->
+      <!-- portfolio -->
       <section class="section">
         <div class="container">
           <h2 class="title-two" id="portfolio-section">Our Portfolio</h2>
@@ -625,7 +625,7 @@
       </section>
     </main>
 
-  <!-- footer -->
+    <!-- footer -->
     <footer class="page-footer section">
       <div class="container container-content">
         <div class="footer-logo-container">
@@ -695,7 +695,7 @@
       </div>
     </footer>
 
-   <!-- backdrop -->
+    <!-- backdrop -->
     <div class="backdrop">
       <div class="modal">
         <button class="modal-close-btn" type="button">
@@ -789,8 +789,10 @@
                   <use href="./images/icons.svg#icon-checkmark"></use>
                 </svg>
               </span>
-              <span class="review-own-checkbox-descr">I accept the terms and conditions of the
-              <a href="" class="privacy-policy-link">Privacy Policy</a></span></label
+              <span class="review-own-checkbox-descr"
+                >I accept the terms and conditions of the
+                <a href="" class="privacy-policy-link">Privacy Policy</a></span
+              ></label
             >
           </div>
 
@@ -799,7 +801,7 @@
       </div>
     </div>
 
-  <!-- mobile -->
+    <!-- mobile -->
     <div class="mobile-menu">
       <div class="container mobile-menu-container">
         <button class="mobile-menu-close-btn">
@@ -824,13 +826,13 @@
         <address class="mobile-contacts" id="mobile-contacts">
           <ul class="mobile-contacts-menu">
             <li class="mobile-contacts-item">
-              <a class="mobile-contacts-info" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
+              <a class="mobile-contacts-info" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
               >
             </li>
             <li class="mobile-contacts-item">
-              <a class="mobile-contacts-info" href="tel:+110001111111"
-                >+11 (000) 111-11-11</a
+              <a class="mobile-contacts-info" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
               >
             </li>
           </ul>
