--- a/index.html
+++ b/index.html
@@ -822,7 +822,7 @@
             </li>
           </ul>
         </nav>
-
+<a href=""></a>
         <address class="mobile-contacts" id="mobile-contacts">
           <ul class="mobile-contacts-menu">
             <li class="mobile-contacts-item">
